data/all_generated_tests/raw_wast_tests/loop_InvalidorInconsistentControlFlowGraph_811.wast
;; 2. **Invalid Operand Consumption**:    Design a loop that starts with mismatched operand stack requirements, such as needing to pop more operands than present on the stack.    Constraint: Validate stack unwinding behavior when operand requirements are mismatched.    Expected: Proper error detection for operand stack inconsistencies should prevent the loop from executing.

(assert_invalid
  (module
    (func
      (i32.const 0)
      (i32.const 1)
      (loop (result i32) (drop) (drop))
    )
  )
  "type mismatch"
)